--- a/About.html
+++ b/About.html
@@ -422,7 +422,7 @@ nav a {
         <li>
         <a href="#">About</a>
                     <ul class="dropdown">
-                <li><a href="About.html">Mission&Vision</a></li>
+                <li><a href="#">Mission&Vision</a></li>
                 
             </ul>
         
@@ -466,31 +466,9 @@ nav a {
     </div>
   </section>
 
-<section class="kevin-picture">
 
-    <div class="img-container">
-        <img src="download2.jpeg" alt="Photo 1">
-        <div class="kevin">
-            <p>APPLY ONLINE</p>
-        </div>
-    </div>
-    <div class="img-container">
-        <img src="Gishushuphoto.png" alt="Photo 2">
-        <div class="kevin">
-            <p>UNDERGRADUATE</p>
-        </div>
-    </div>
-    <div class="img-container">
-        <img src="download.jpg" alt="Photo 3">
-        <div class="kevin">
-            <p>GRADUATE PROGRAMMES</p>
-        </div>
-    </div>
-
-
-</section>
 <section class="additional-section">
-        <img src="admini.JPG" alt="admini">
+        <img src="visi.JPG" alt="admini">
     </section>
 <section class="additional-section">
         <img src="footer.JPG" alt="footer">
