--- a/NewStudentSignUp.html
+++ b/NewStudentSignUp.html
@@ -144,7 +144,7 @@
 
         <!-- Login link -->
         <div class="login-link">
-            <label>Already have an account? <a href="login.html">Login</a></label>
+            <label>Already have an account? <a href="NewStudentLogin.html">Login</a></label>
         </div>
     </form>
 </body>
