--- a/TeacherHomepage.html
+++ b/TeacherHomepage.html
@@ -421,7 +421,8 @@ nav a {
         <li><a href="#">AUCA Alumni</a></li>
         
        
-        <li><a href="TeacherRegister.html">Teacher Dashboard</a></li>
+        <li><a href="RegisterTeacher.jsp">Teacher Dashboard</a></li>
+        <li><a href="NewStudentLogin.html">LogOut</a></li>
     </ul>
 
  <span class="search-container">
