--- a/StudentRegister.html
+++ b/StudentRegister.html
@@ -13,7 +13,7 @@
         }
         .container {
             width: 40%;
-            margin: 0 auto;
+            margin: 70px auto;
             padding: 10px;
             background-color: rgb(0, 255, 255);
             border-radius: 5px;
